navbar spacing fixed

--- a/style.css
+++ b/style.css
@@ -15,54 +15,27 @@ body {
     /* Get better font */
     font-family: 'Prompt', sans-serif;
 }
+  
 .navbar {
-    position: relative;
-    background-color: rgba(255, 255, 255, 0.3);
-    overflow: hidden;
-    height: 100px;
+    background-color: rgba(255, 255, 255, 0.3);;
+    display:flex;
+    align-items:center;
 }
-.logo a {
-    float: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  
+.navbar div {
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+    flex: 1;
+    padding: 0;
 }
-.navbar a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
+.navbar a img {
+    max-width:100px;
+}
+.navbar div a {
     text-decoration: none;
-    font-size: 17px;
-}
-.navbar-right {
-    float: right;
-}
-  
-/* Change the color of links on hover */
-.navbar a:hover {
-    background-color: #ddd;
-    color: black;
-}
-  
-/* Add a color to the active/current link */
-.navbar a.active {
-    background-color: #04AA6D;
-    color: white;
-}
-
-/* Responsive navigation menu - display links on top of each other instead of next to each other (for mobile devices) */
-@media screen and (max-width: 600px) {
-    .topnav a, .topnav-right {
-        float: none;
-        display: block;
-    }
-
-    .logo a {
-        position: relative;
-        top: 0;
-        left: 0;
-        transform: none;
-    }
+    color: var(--dark-color);
+    font-size: x-large;
+    list-style-type: none;
+    /* margin:0 2%; */
 }
